Modifes external sotrage in tripleo-overcloud
Changed the type of 'storage-external' in 'plugin.spec' of
'tripleo-overcloud' plugin from 'Bool' to 'Value'.
If one want to use an external storage, he will need to provide the name
of a var (YAML) file contains the relevant data for that storage.

Change-Id: I43c42d79564ff951a224d43d9f8587bcf10f0f15

--- a/plugins/tripleo-overcloud/templates/storage/ceph.yml.j2
+++ b/plugins/tripleo-overcloud/templates/storage/ceph.yml.j2
@@ -4,15 +4,15 @@ parameter_defaults:
     CinderEnableNfsBackend: false
     NovaEnableRbdBackend: true
     GlanceBackend: rbd
-{% if install.storage.external %}
+{% if install.storage.external is defined %}
     CinderRbdPoolName: "automation-volumes"
     NovaRbdPoolName: "automation-vms"
     GlanceRbdPoolName: "automation-images"
     CinderBackupRbdPoolName: "automation-backups"
-{% for key, value in private.storage.ceph.common.iteritems() %}
+{% for key, value in external_storage.ceph.common.iteritems() %}
     {{ key }}: {{ value }}
 {% endfor %}
-{% for key, value in private.storage.ceph[ceph_compt_version].iteritems() %}
+{% for key, value in external_storage.ceph[ceph_compt_version].iteritems() %}
     {{ key }}: {{ value }}
 {% endfor %}
 
