v1: external LB: Adjust external-lb template
There were some changes in the parameters name in Ocata to which
we need to adjust the external-lb template. Based on tripleo-heat-templates
patch a3f03eb3.

Change-Id: Ieeb6c6e0ec2603afb22512a360f3e5580ee19724

--- a/playbooks/installer/ospd/overcloud/templates/external-lb.yaml.j2
+++ b/playbooks/installer/ospd/overcloud/templates/external-lb.yaml.j2
@@ -32,7 +32,7 @@ parameters:
 {% endif %}
 
 parameter_defaults:
-{% if installer.product.version|openstack_release > 8 %}
+{% if installer.product.version|openstack_release > 8 and installer.product.version|openstack_release < 11 %}
   ServiceNetMap:
     NeutronTenantNetwork: tenant
     CeilometerApiNetwork: internal_api
@@ -66,9 +66,14 @@ parameter_defaults:
     GnocchiApiNetwork: internal_api
     SaharaApiNetwork: internal_api
 {% endif %}
+{% if installer.product.version|openstack_release > 10 %}
+  ServiceNetMap:
+    KeystoneAdminApiNetwork: internal_api # allows undercloud to config endpoints
+{% endif %}
 {% if installer.product.version|openstack_release > 7 %}
   RedisPassword: 'examplepassword'
 {% endif %}
+{% if installer.product.version|openstack_release < 11 %}
   ControlPlaneIP: {{ installer.loadbalancer.network.plain.ip | ipaddr('address') }}
   ExternalNetworkVip: {{ installer.loadbalancer.network.external.vip | ipaddr('address') }}
   InternalApiNetworkVip: {{ installer.loadbalancer.network.internal_api.vip | ipaddr('address') }}
@@ -76,6 +81,15 @@ parameter_defaults:
   StorageMgmtNetworkVip: {{ installer.loadbalancer.network.storage_mgmnt.vip | ipaddr('address') }}
   ServiceVips:
     redis: {{ installer.loadbalancer.network.redis.vip | ipaddr('address') }}
+{% endif %}
+{% if installer.product.version|openstack_release > 10 %}
+  ControlFixedIPs: [{'ip_address':'{{ installer.loadbalancer.network.plain.ip | ipaddr('address') }}'}]
+  PublicVirtualFixedIPs: [{'ip_address':'{{ installer.loadbalancer.network.external.vip | ipaddr('address') }}'}]
+  InternalApiVirtualFixedIPs: [{'ip_address':'{{ installer.loadbalancer.network.internal_api.vip | ipaddr('address') }}'}]
+  StorageVirtualFixedIPs: [{'ip_address':'{{ installer.loadbalancer.network.storage.vip | ipaddr('address') }}'}]
+  StorageMgmtVirtualFixedIPs: [{'ip_address':'{{ installer.loadbalancer.network.storage_mgmnt.vip | ipaddr('address') }}'}]
+  RedisVirtualFixedIPs: [{'ip_address':'{{ installer.loadbalancer.network.redis.vip | ipaddr('address') }}'}]
+{% endif %}
   ControllerIPs:
     external_cidr: "{{ installer.loadbalancer.network.external.vip | ipaddr('prefix') }}"
     internal_api_cidr: "{{ installer.loadbalancer.network.internal_api.vip | ipaddr('prefix') }}"
