Explicit gnocchi pool name
The 'metrics' named pool was the default,
let's use automation-metrics for consistency.

Change-Id: If55ab4512d2ff76155593cd597a29414933765d7

--- a/playbooks/installer/ospd/overcloud/templates/storage/ceph.yml.j2
+++ b/playbooks/installer/ospd/overcloud/templates/storage/ceph.yml.j2
@@ -9,6 +9,7 @@ parameter_defaults:
     NovaRbdPoolName: "automation-vms"
     GlanceRbdPoolName: "automation-images"
     CinderBackupRbdPoolName: "automation-backups"
+    GnocchiRbdPoolName: "automation-metrics"
 {% for key, value in private.storage.ceph.common.iteritems() %}
     {{ key }}: {{ value }}
 {% endfor %}
