Add ntp server to composable roles overcloud deploy command
This change passes an NTP server to be used by the overcloud
nodes via the --ntp-server flag of the overcloud deploy command.

Change-Id: I7010a404450fb5f82282ad0c07ee14d2950404ad

--- a/plugins/tripleo-overcloud/templates/composable_roles/overcloud_deploy.sh.j2
+++ b/plugins/tripleo-overcloud/templates/composable_roles/overcloud_deploy.sh.j2
@@ -1,6 +1,7 @@
 #!/bin/bash
 
 openstack overcloud deploy --templates /usr/share/openstack-tripleo-heat-templates/ \
+  --ntp-server clock.redhat.com \
   -r {{ template_base }}/roles/roles_data.yaml \
   -e {{ template_base }}/roles/nodes.yaml \
   -e {{ template_base }}/roles/network-config.yaml \
