--- a/infrared/common/roles/tls-everywhere/templates/freeipa-setup.env.j2
+++ b/infrared/common/roles/tls-everywhere/templates/freeipa-setup.env.j2
@@ -1,7 +1,7 @@
 export UndercloudFQDN={{ groups['undercloud'][0] }}.{{ freeipa_cloud_domain }}
 export UsingNovajoin=true
 export UsingNovajoin=TRUE
-export Hostname={{ freeipa_node }}.{{ freeipa_cloud_domain }}
+export Hostname={{ freeipa_node }}.{{ freeipa_domain }}
 export FreeIPAIP={{ freeipa_node_ipaddress }}
 export AdminPassword={{ freeipa_admin_password }}
 export HostsSecret={{ freeipa_hosts_secret }}
