DNM: Increase ceph-ansible timeouts to workaround BZ#1707020
Change-Id: I75aa57dd30576cc9955d7d0ff175f3e2f69d3b91

--- a/plugins/tripleo-undercloud/templates/undercloud.conf.j2
+++ b/plugins/tripleo-undercloud/templates/undercloud.conf.j2
@@ -1,4 +1,5 @@
 [DEFAULT]
+undercloud_enable_selinux = false
 {% if install.version|openstack_release < 15 and install.get('bip', {}).get('address', {}) %}
 docker_bip = '--bip={{ install.bip.address }}'
 {% endif %}
