--- a/plugins/virsh/templates/vqfx/configure.sh.j2
+++ b/plugins/virsh/templates/vqfx/configure.sh.j2
@@ -2,14 +2,14 @@
 set -x
 
 # copy ssh key to the instance
-expect -c "
+TERM=xterm expect -c "
 spawn bash -c \"ssh-copy-id -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i {{ switch_ssh_key }}.pub {{ switch_ip }}\"
 expect \"Password:\"
 send \"Juniper\r\"
 expect \"Number of key(s) added: 1\"
 "
 
-expect -c"
+TERM=xterm expect -c"
   set timeout 300
   spawn ssh -i {{ switch_ssh_key }} root@{{ switch_ip }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
   expect \"root@:RE:0%\"
@@ -36,7 +36,7 @@ sleep 60
 scp -i {{ switch_ssh_key  }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null {{ temp_dir.path }}/vqfx_wait.sh root@{{ switch_ip }}:~/wait.sh
 
 # wait for interfaces to come up, then configure
-expect -c"
+TERM=xterm expect -c"
   set timeout 300
   spawn ssh -i {{ switch_ssh_key }} root@{{ switch_ip }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
   expect \"root@:RE:0%\"
