[WIP] Enable ceph4beta installation by default
Ahead of possible resolution of BZ#1722036 enable installation
of ceph4beta on osp15. if set to false or not specified, all
installations that include ceph will fail.

Change-Id: I3f5c3cd49f73dbd51968730b3478da0b024c7bd5

--- a/plugins/tripleo-overcloud/templates/storage/internal.yml.j2
+++ b/plugins/tripleo-overcloud/templates/storage/internal.yml.j2
@@ -1,4 +1,7 @@
 parameter_defaults:
+{% if install.version|default(undercloud_version)|openstack_release == 15%}
+    EnableRhcs4Beta: true
+{% endif %}
     CephAnsiblePlaybookVerbosity: 3
     CinderEnableIscsiBackend: false
     CinderEnableRbdBackend: true
