Added flag to enable is_hci mem allocation in ceph
Added a flag to allow enabling the is_hci flag for
hyperconverged deployments with ceph.

Change-Id: Ieea425ae0390ec9b09f06f2e977885348d5c18a5

--- a/plugins/tripleo-overcloud/templates/storage/internal.yml.j2
+++ b/plugins/tripleo-overcloud/templates/storage/internal.yml.j2
@@ -57,6 +57,11 @@ parameter_defaults:
 {% endif %}{# end of install.splitstack #}
 
         journal_size: 512
+{% if install.ceph.hci.memreserve|default(false) and install.version|default(undercloud_version) >= 13 %}
+{# This block, for openstack>=13 defines the memory reservation feature introduced in ceph 3.2 #}
+    CephAnsibleExtraConfig:
+        is_hci: true
+{% endif %}{# End os is_hci block #}
 
 {% else %}
     ExtraConfig:
