workaround for BZ#1734525
This patch provides workaround for BZ1734525.
Using this w/a doesn't break things even when
the tripleo-heat-templates will be updated with
the fix.

Change-Id: Icec1a677778b51ab380e1a9ae6d4c9cf106825e1
Signed-off-by: Alexander Chuzhoy <achuzhoy@redhat.com>

--- a/plugins/tripleo-overcloud/templates/storage/internal.yml.j2
+++ b/plugins/tripleo-overcloud/templates/storage/internal.yml.j2
@@ -64,7 +64,11 @@ parameter_defaults:
 {# This block, for openstack>=13 defines the memory reservation feature introduced in ceph 3.2 #}
     CephAnsibleExtraConfig:
         is_hci: true
-{% endif %}{# End os is_hci block #}
+{% endif %}{# End of is_hci block #}
+{% if not install.ceph.hci.memreserve|default(false) and install.version|default(undercloud_version) == 15 %} # Workaround for BZ#1734525
+    CephAnsibleExtraConfig:
+        dashboard_enabled: False
+{% endif %}{# end of is_not_hci block #}
 
 {% else %}
     ExtraConfig:
