--- a/plugins/tripleo-overcloud/templates/dvr-override.yaml.j2
+++ b/plugins/tripleo-overcloud/templates/dvr-override.yaml.j2
@@ -1,8 +1,8 @@
 resource_registry:
 {% if install.version|default(undercloud_version)|openstack_release <= 11 %}
-    OS::TripleO::Compute::Net::SoftwareConfig: {{ template_base }}/network/{% if install.deployment.files == 'composable_roles' %}nic-configs{% else %}three-nics-vlans{% endif %}/{{ nics_subfolder }}/controller.yaml
+    OS::TripleO::Compute::Net::SoftwareConfig: {{ template_base }}/network/{% if install.deployment.files|basename == 'composable_roles' %}nic-configs{% else %}three-nics-vlans{% endif %}/{{ nics_subfolder }}/controller.yaml
 {% else %}
-    OS::TripleO::Compute::Net::SoftwareConfig: {{ template_base }}/network/{% if install.deployment.files == 'composable_roles' %}nic-configs{% endif %}/{{ nics_subfolder }}/compute-dvr.yaml
+    OS::TripleO::Compute::Net::SoftwareConfig: {{ template_base }}/network/{% if install.deployment.files|basename == 'composable_roles' %}nic-configs{% endif %}/{{ nics_subfolder }}/compute-dvr.yaml
 {% endif %}
 {% if install.version|default(undercloud_version)|openstack_release <= 14 %}
     OS::TripleO::Compute::Ports::ExternalPort: {{ install.heat.templates.basedir }}/network/ports/external.yaml
