Set the default value of image_download_source in Ironic OC to http
With OSP15 and above we have an option to deploy images
without using Swift Object Store (Swift).  The direct
deploy interface can now use http method for both
whole and partitioned disk images.

swift - IPA ramdisk retrieves instance image from the Object
http  - IPA ramdisk retrieves instance image from HTTP service
        served at conductor nodes.

Change-Id: Ia73d3ac4b8f44115a2bec0901e704f79b7bcc221
Signed-off-by: Michael Lammon <mlammon@redhat.com>

--- a/plugins/tripleo-overcloud/templates/ironic-custom.yaml.j2
+++ b/plugins/tripleo-overcloud/templates/ironic-custom.yaml.j2
@@ -48,3 +48,6 @@ parameter_defaults:
   IPAImageURLs: '["http://{{ ansible_br_ctlplane['ipv4']['address'] }}:8088/agent.kernel", "http://{{ ansible_br_ctlplane['ipv4']['address'] }}:8088/agent.ramdisk"]'
   IronicInspectorInterface: 'br-baremetal'
 {% endif %}
+{% if install.version|default(undercloud_version) | openstack_release > 14 and install.image.download.source == 'http' %}
+  IronicImageDownloadSource: http
+{% endif %}
