--- a/plugins/tripleo-overcloud/templates/splitstack/ctrlplane-template.yml.j2
+++ b/plugins/tripleo-overcloud/templates/splitstack/ctrlplane-template.yml.j2
@@ -26,11 +26,11 @@ parameter_defaults:
       fixed_ips:
         - ip_address: 192.168.24.20
       subnets:
-        - cidr: 24
+        - cidr: {% if install.version|default(undercloud_version) |openstack_release >= 15 %}192.168.24.0/{% endif %}24
 {% for host_name in groups.overcloud_nodes|sort %}
     {{ host_name }}-ctlplane:
       fixed_ips:
         - ip_address: {{ hostvars[host_name]['ansible_eth0']['ipv4']['address'] }}
       subnets:
-        - cidr: 24
+        - cidr: {% if install.version|default(undercloud_version) |openstack_release >= 15 %}192.168.24.0/{% endif %}24
 {% endfor %}
