Update pre-deployed server DeployedServerPortMap parameter
https://bugzilla.redhat.com/show_bug.cgi?id=1738551

Change-Id: Iead5be94378bd56248138868369057882dcb10f2

--- a/plugins/tripleo-overcloud/templates/splitstack/ctrlplane-template.yml.j2
+++ b/plugins/tripleo-overcloud/templates/splitstack/ctrlplane-template.yml.j2
@@ -26,11 +26,11 @@ parameter_defaults:
       fixed_ips:
         - ip_address: 192.168.24.20
       subnets:
-        - cidr: 24
+        - cidr: 192.168.24.0/24
 {% for host_name in groups.overcloud_nodes|sort %}
     {{ host_name }}-ctlplane:
       fixed_ips:
         - ip_address: {{ hostvars[host_name]['ansible_eth0']['ipv4']['address'] }}
       subnets:
-        - cidr: 24
+        - cidr: 192.168.24.0/24
 {% endfor %}
