Add network tags under DeployedServerPortMap parameter
According to https://bugzilla.redhat.com/show_bug.cgi?id=1734172#c15

Change-Id: I43e8084195d4d6866836f6833490592bcf2ebf15

--- a/plugins/tripleo-overcloud/templates/splitstack/ctrlplane-template.yml.j2
+++ b/plugins/tripleo-overcloud/templates/splitstack/ctrlplane-template.yml.j2
@@ -27,10 +27,20 @@ parameter_defaults:
         - ip_address: 192.168.24.20
       subnets:
         - cidr: {% if install.version|default(undercloud_version) |openstack_release >= 15 %}192.168.24.0/{% endif %}24
+{% if install.version|default(undercloud_version) |openstack_release >= 15 %}
+      network:
+        tags:
+          - 192.168.24.0/24
+{% endif %}
 {% for host_name in groups.overcloud_nodes|sort %}
     {{ host_name }}-ctlplane:
       fixed_ips:
         - ip_address: {{ hostvars[host_name]['ansible_eth0']['ipv4']['address'] }}
       subnets:
         - cidr: {% if install.version|default(undercloud_version) |openstack_release >= 15 %}192.168.24.0/{% endif %}24
+{% if install.version|default(undercloud_version) |openstack_release >= 15 %}
+      network:
+        tags:
+          - 192.168.24.0/24
+{% endif %}
 {% endfor %}
