Allow the EnableRhcs4Beta flag for osp15 and above
In preparation for osp16 CI jobs shouldn't fail over this
flag when using beta ceph4 containers

Change-Id: Iea035565cc55544d5c5134b6779270082bfcc10c

--- a/plugins/tripleo-overcloud/templates/storage/internal.yml.j2
+++ b/plugins/tripleo-overcloud/templates/storage/internal.yml.j2
@@ -1,5 +1,5 @@
 parameter_defaults:
-{% if install.version|default(undercloud_version)|openstack_release == 15%}
+{% if install.version|default(undercloud_version)|openstack_release >= 15%}
     EnableRhcs4Beta: true
 {% endif %}
     CephAnsiblePlaybookVerbosity: 3
