Add DnsSearchDomains for overcloud.
This adds the ability to specify
multiple search domains in resolv.conf
for the overcloud nodes.

Change-Id: I9c167b0a8f3d50aaab42737041a151474c942588

--- a/plugins/tripleo-overcloud/vars/deployment/files/composable_roles/network/nic-configs/legacy/controller-v6.yaml.j2
+++ b/plugins/tripleo-overcloud/vars/deployment/files/composable_roles/network/nic-configs/legacy/controller-v6.yaml.j2
@@ -77,6 +77,10 @@ parameters:
   EC2MetadataIp: # Override this via parameter_defaults
     description: The IP address of the EC2 metadata server.
     type: string
+  DnsSearchDomains: # Override this via parameter_defaults
+    default: []
+    description: A list of DNS search domains to be added (in order) to resolv.conf.
+    type: comma_delimited_list
 
 resources:
   OsNetConfigImpl:
@@ -145,6 +149,7 @@ resources:
                           # brige mapping entries for it to be used.
                           name: {get_input: bridge_name}
                           dns_servers: {get_param: DnsServers}
+                          domain: {get_param: DnsSearchDomains}
                           use_dhcp: false
             #              defroute: true
                           addresses:
