--- a/plugins/tripleo-overcloud/vars/deployment/files/virt/network/three-nics-vlans/controller-v6.yaml.j2
+++ b/plugins/tripleo-overcloud/vars/deployment/files/virt/network/three-nics-vlans/controller-v6.yaml.j2
@@ -77,6 +77,10 @@ parameters:
   EC2MetadataIp: # Override this via parameter_defaults
     description: The IP address of the EC2 metadata server.
     type: string
+  DnsSearchDomains: # Override this via parameter_defaults
+    default: []
+    description: A list of DNS search domains to be added (in order) to resolv.conf.
+    type: comma_delimited_list
 {% if install.version|openstack_release >= 15 %}
   ControlPlaneStaticRoutes:
     default: []
@@ -261,6 +265,8 @@ resources:
                           name: bridge_name
                           dns_servers:
                               get_param: DnsServers
+                          domain:
+                              get_param: DnsSearchDomains
                           use_dhcp: false
             #              defroute: true
                           addresses:
