Fix loadbalancer issues
This change improves and fixes the loadbalancer VM in a few ways:
1) It does not start haproxy before rebooting the VM
This is strictly needed because we're not manually bringing up the
network interfaces and so the haproxy service will fail to start
because it cannot bind to the right IP addresses

2) We leave selinux in enforcing
But we enable the boolean haproxy_connect_any

3) We add the haproxy stats socket
This is useful to programmatically query the haproxy status of the
backend services

4) We fix the mysql timeout which fixes the following warning:
Aug 19 05:30:07 loadbalancer-0 haproxy[15827]: [WARNING] 230/053007 (15827) : config : missing timeouts for proxy 'mysql'.
Aug 19 05:30:07 loadbalancer-0 haproxy[15827]:    | While not properly invalid, you will certainly encounter various problems
Aug 19 05:30:07 loadbalancer-0 haproxy[15827]:    | with such a configuration. To fix this, please ensure that all following
Aug 19 05:30:07 loadbalancer-0 haproxy[15827]:    | timeouts are set to a non-zero value: 'client', 'connect', 'server'.

5) It removes the need for network-scripts and moves the ifcfg files
to NetworkManager's control

6) It customizes the haproxy.service to wait for network-online
See https://www.freedesktop.org/wiki/Software/systemd/NetworkTarget/
By default it waits for network.target which is broken IMO as the IPs
won't be configured and without net.ipv4.ip_non_localbind = 1, haproxy
fails to start

7) Sets the hostname of the loadbalancer VM so it persists after reboot

Tested as follows:
- Deployed with loadbalancer:1
- Observed that the loadbalancer vm is configured correctly (haproxy
  started correctly, interfaces all up after reboot and correct
  hostname)

Change-Id: I1681bb5d853a5c9c3db4f8c244688b47a6fcde9c

--- a/plugins/tripleo-overcloud/roles/loadbalancer/templates/haproxy.cfg.j2
+++ b/plugins/tripleo-overcloud/roles/loadbalancer/templates/haproxy.cfg.j2
@@ -5,6 +5,8 @@ global
   maxconn  10000
   pidfile  /var/run/haproxy.pid
   user  haproxy
+  stats  socket /var/lib/haproxy/stats mode 600 level user
+  stats  timeout 2m
 
 defaults
   log  global
@@ -121,8 +123,8 @@ listen mysql
   option httpchk
   stick on dst
   stick-table type ip size 1000
-  timeout client 0
-  timeout server 0
+  timeout client 90m
+  timeout server 90m
   {% for x in range(controllers_number|int) %}
 server {{ loadbalancer.controllers.name_prefix }}{{x}} {{ loadbalancer.network.internal_api.net | ipaddr('net') | ipaddr(loadbalancer.controllers.pool_start + x) | ipaddr('address') }}:3306 backup check fall 5 inter 2000 on-marked-down shutdown-sessions port 9200 rise 2
   {% endfor %}
