--- a/plugins/tripleo-overcloud/roles/loadbalancer/templates/vlan-external.cfg.j2
+++ b/plugins/tripleo-overcloud/roles/loadbalancer/templates/vlan-external.cfg.j2
@@ -4,4 +4,4 @@ ONBOOT=yes
 IPADDR={{ loadbalancer.network.external.vip | ipaddr('address') }}
 PREFIX={{ loadbalancer.network.external.vip | ipaddr('prefix') }}
 USERCTL=no
-NM_CONTROLLED=no
+NM_CONTROLLED=yes
