--- a/plugins/tripleo-overcloud/roles/loadbalancer/templates/vlan-tenant.cfg.j2
+++ b/plugins/tripleo-overcloud/roles/loadbalancer/templates/vlan-tenant.cfg.j2
@@ -5,4 +5,4 @@ IPADDR={{ loadbalancer.network.tenant.vip | ipaddr('address') }}
 PREFIX={{ loadbalancer.network.tenant.vip | ipaddr('prefix') }}
 USERCTL=no
 VLAN=yes
-NM_CONTROLLED=no
+NM_CONTROLLED=yes
