--- a/plugins/tripleo-overcloud/roles/loadbalancer/templates/vlan-storage.cfg.j2
+++ b/plugins/tripleo-overcloud/roles/loadbalancer/templates/vlan-storage.cfg.j2
@@ -9,4 +9,4 @@ IP{{ (install.network.protocol == 'ipv6') | ternary('V6','') }}ADDR={{ loadbalan
 {{ (install.network.protocol == 'ipv6') | ternary('IPV6','') }}PREFIX={{ loadbalancer.network.storage.vip | ipaddr('prefix') }}
 USERCTL=no
 VLAN=yes
-NM_CONTROLLED=no
+NM_CONTROLLED=yes
