Configure bridge_mappings for non-DVR OVN jobs
Add bridge_mappings for non-DVR, OVN jobs.

This patch fixes wrong bridge_mappings configuration for
non-dvr jobs for OVN.
Controllers should have been configured with the bridge mappigns, otherwise
SNAT/NAT traffic doesn't work.

So the conditional at the beggining looked like:
{% if install.version|openstack_release > 14 %}

After a patch [0] the line was changed to:
{% if install.version|openstack_release > 14 and not install.network.dvr %}

Unfortunately CI jobs for Neutron NON-DVR started failing [1],
so the line was modified to:
{% if install.version|openstack_release > 14 and not install.network.dvr and not install.network.ovs %}

And for now it still doesn't work for OVN. So if the BridgeMappings for
versions older than 14 is like:
NeutronBridgeMappings: "datacentre:br-ex,tenant:br-isolated"

And was changed to not cover ml2/ovs in [1] and it still doesn't work
for OVN. So I'm addeding bridge-mappings for Controllers only.

[0] https://github.com/redhat-openstack/infrared/commit/14b3283ad205f01f785509a3d4514d04c51e7a34
[1] https://review.gerrithub.io/c/redhat-openstack/infrared/+/455390/

Change-Id: I97c2e6f6ac9c3abd80d7ee52fdcd48ce8323341c

--- a/plugins/tripleo-overcloud/vars/deployment/files/virt/network/network-environment.yaml.j2
+++ b/plugins/tripleo-overcloud/vars/deployment/files/virt/network/network-environment.yaml.j2
@@ -51,7 +51,10 @@ parameter_defaults:
     NeutronExternalNetworkBridge: ""
 {% endif %}
 {% if install.version|openstack_release > 14 and not install.network.dvr and not install.network.ovs %}
-    NeutronBridgeMappings: ""
+    ControllerParameters:
+      NeutronBridgeMappings: "datacentre:br-ex,tenant:br-isolated"
+    ComputeParameters:
+      NeutronBridgeMappings: ""
 {% else %}
     NeutronBridgeMappings: "datacentre:br-ex,tenant:br-isolated"
 {% endif %}
