--- a/plugins/tripleo-undercloud/templates/undercloud.conf.j2
+++ b/plugins/tripleo-undercloud/templates/undercloud.conf.j2
@@ -29,6 +29,7 @@ dhcp_end = 192.168.24.55
 undercloud_public_host = 192.168.24.2
 undercloud_admin_host = 192.168.24.3
 {% endif %}
+undercloud_nameservers = {{ undercloud_nameservers}}
 {# OSPd7 doesn't support "inspection_iprange" option.
 If we use "inspection_iprange" there, range won't
 be propagated to ironic-dnsmasq config and introspection
